# yet-another-django-poetry-template

./: .gitignore  README.md  pyproject.toml  ruff.toml
api/core/: settings.py
